--- a/index.html
+++ b/index.html
@@ -4,7 +4,50 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
+    <title>Donate</title>
   </head>
-  <body></body>
+  <body>
+    <section class="header">
+      <div class="help">
+        <h1 class="text">
+          <span class="those">Let’s Help</span> Those Who <br /><span
+            class="those"
+            >Are More</span
+          >
+          In Need
+        </h1>
+        <p class="text1">
+          We need to help the poor people who need <br />
+          Food and don't have to buy it
+        </p>
+        <a class="link-button" target="_blank">Donate</a>
+      </div>
+    </section>
+    <section>
+      <h1 id="text">Donate Today</h1>
+      <p id="text1">
+        We need to help the poor people who need <br />
+        Food and don't have to buy it
+      </p>
+
+      <section class="boro-taka">
+        <div id="taka" class="taka">100tk</div>
+        <div class="taka">200tk</div>
+        <div id="color-taka" class="taka">500tk</div>
+        <div class="taka">1000tk</div>
+        <div class="taka">5000tk</div>
+      </section>
+      <br />
+
+      <p id="other-taka">Other Ammount(taka)</p>
+      <hr />
+      <br />
+      <a id="link-button" target="_blank">Donate</a>
+    </section>
+  </body>
 </html>
